style.css
.fieldhide{
display: none;
}
.h2{
display: flex;
justify-content: end;
margin:0 ;
cursor: pointer;
font-size: larger;
transition: 0.3s;
}

.login-form, .contactus, .signup-form{
    border-radius: 14px;
    margin: 80px auto;
    width: 280px;
    padding: 8px;
    display: none;
    transition: 0.3s;
}
..contactus{
    display: flex;
    flex-wrap: wrap;
}
input, .btn{
width: 100%;
height: 36px;
box-sizing: border-box;
text-align: center;
margin-top: 8px;
border-radius: 12px;
}
.btn{
color: whitesmoke;
background-color: black;
}

h1 {
color: rgb(0, 0, 139);
text-align: center;
}
.h1::selection{
color: rgb(65, 105, 225);
}
nav {
width: 80% auto;
margin: 25px;
}

a {
text-decoration: none;
font-size: 15px;
color: rosybrown;
font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
sans-serif;
font-weight: bold;
}
a:hover {
color: black;
transform: scale(1.1);
transition: all 0.3s ;
}
.nav {
text-decoration: none;
transition: 0.3s;

display: flex;
justify-content: center;
align-items: center;
}

h2:hover{
    color: red;
}
.ig{
    color: black;
}
.ig:hover{
    color: rgb(216, 28, 28);
}
.container{
    display: flex;
}
.card{
    display: flex;
    justify-content: space-evenly;
}
.card-2{
    width: 360px;
    display: flex;
    justify-content: space-evenly;
    margin: 12px;
}
.img{
    width: 100%;
    border-radius: 16px;
}
.img:hover{
    scale: 1.1;
}
.par{
    width: 95%;
    text-align: center;
    justify-content: center;
    margin: 12px;
    margin-bottom: 16px;
}

h3{
    display: flex;
    justify-content: center;
    align-items: center;
}

